syntax = "proto3";

package user;
option go_package = "github.com/campus-trading/user-service/pkg/proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

message RegisterRequest {
  string email = 1;
  string phone = 2;
  string password = 3;
  string nickname = 4;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
}

message UpdateProfileRequest {
  string user_id = 1;
  string nickname = 2;
  string avatar_url = 3;
  string contact_info = 4;
}

message UpdateProfileResponse {
  string message = 1;
}

message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  string user_id = 1;
  string email = 2;
  string phone = 3;
  string nickname = 4;
  string avatar_url = 5;
  string contact_info = 6;
  string created_at = 7;
}